--- a/src/ta/Makefile.am
+++ b/src/ta/Makefile.am
@@ -10,6 +10,7 @@ if TA_GUI
 
 TAHEADS_GUI =\
 	@abs_srcdir@/ta_qt.h \
+	@abs_srcdir@/ta_matrix_qt.h \
 	@abs_srcdir@/ta_qtdata_def.h \
 	@abs_srcdir@/ta_qtdata.h \
 	@abs_srcdir@/ta_qtdialog.h \
@@ -26,6 +27,7 @@ TAHEADS_GUI =\
 
 HEADS_GUI =\
 	ta_qt.h \
+	ta_matrix_qt.h \
 	ta_qtdata_def.h \
 	ta_qtdata.h \
 	ta_qtdialog.h \
@@ -44,6 +46,7 @@ SRCS_GUI =\
 	ta_qt.cpp \
 	ta_qt.moc.cpp \
 	ta_type_qt.cpp \
+	ta_matrix_qt.cpp \
 	ta_qtdata.cpp \
 	ta_qtdata_def.moc.cpp \
 	ta_qtdata.moc.cpp \
